<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/layoutPadding">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_5">

                <ImageView
                    android:id="@+id/profileId"
                    android:layout_width="@dimen/profileIconPortrait"
                    android:layout_height="@dimen/profileIconPortrait"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/profile_pic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:text="@string/user_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileId" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:padding="@dimen/padding_5"
                    android:text="@string/software_engineer"
                    app:layout_constraintEnd_toEndOf="@+id/userName"
                    app:layout_constraintStart_toStartOf="@+id/userName"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/find_me_light_background_color"
                    android:padding="@dimen/padding_5"
                    android:text="@string/find_me"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/twitter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <ImageView
                    android:id="@+id/linkedIn"
                    android:layout_width="@dimen/logoPortrait"
                    android:layout_height="@dimen/logoPortrait"
                    android:clickable="true"
                    android:contentDescription="@string/logo"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/twitter"
                    app:layout_constraintEnd_toEndOf="@+id/userName"
                    app:layout_constraintTop_toTopOf="@+id/github" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="@dimen/logoPortrait"
                    android:layout_height="@dimen/logoPortrait"
                    android:clickable="true"
                    android:contentDescription="@string/logo"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/github"
                    app:layout_constraintEnd_toStartOf="@+id/linkedIn"
                    app:layout_constraintStart_toEndOf="@+id/twitter"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="@dimen/logoPortrait"
                    android:layout_height="@dimen/logoPortrait"
                    android:layout_marginStart="12dp"
                    android:clickable="true"
                    android:contentDescription="@string/logo"
                    android:focusable="true"
                    android:padding="@dimen/padding_5"
                    android:scaleType="center"
                    android:src="@drawable/linkedin"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/github" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/padding_5"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_12"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageView
            android:id="@+id/dropArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/drop_icon"
            android:padding="@dimen/padding_5"
            android:src="@drawable/arrow_drop_down_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintTop_toBottomOf="@+id/bioId" />

        <TextView
            android:id="@+id/viewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/padding_5"
            android:text="@string/my_capabilities"
            app:layout_constraintEnd_toStartOf="@+id/dropArrow"
            app:layout_constraintTop_toTopOf="@+id/dropArrow" />


        <TextView
            android:id="@+id/capabilityId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/padding_10"
            android:scrollbars="vertical"
            android:text="@string/capabilities"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/dropArrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewId" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
